Refactored handlers code to services and controllers
