# src/create_user.go
@@ -1,59 +1,0 @@
-package main
-
-import (
-	"net/http"
-
-	"github.com/gin-gonic/gin"
-	"github.com/im-mk/user-service/src/models"
-	_ "github.com/lib/pq"
-	"golang.org/x/crypto/bcrypt"
-)
-
-func hashPassword(password string) (string, error) {
-	bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
-	return string(bytes), err
-}
-
-// @Summary Create a new user
-// @Description Create a new user with the input payload
-// @Tags users
-// @Accept  json
-// @Produce  json
-// @Param user body models.CreateUserRequest true "Create User Request"
-// @Success 200 {object} models.User
-// @Failure 400 {object} gin.H
-// @Failure 500 {object} gin.H
-// @Router /users [post]
-func createUserHandler(c *gin.Context) {
-	var req models.CreateUserRequest
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	hashedPassword, err := hashPassword(req.Password)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to hash password"})
-		return
-	}
-
-	// Check if the username or email already exists
-	exists, err := userRepo.UserExists(req.Username, req.Email)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to check for existing user"})
-		return
-	}
-	if exists {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Username or email already exists"})
-		return
-	}
-
-	// Insert the new user
-	err = userRepo.CreateUser(req.Username, req.Email, hashedPassword)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create user"})
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{"message": "User created successfully"})
-}
