# src/docs/swagger.json
@@ -131,6 +131,10 @@
         },
         "models.LoginRequest": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
                     "type": "string"
